2007-11-22  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  Try harder to use the return value from fgets().

2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  For theses two fgets we handle the error below.

2007-11-21  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_send_event):
	Only send upstream events upstream. Fixes #498746.

2007-11-21  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: Laurent Glayal <spglegle at yahoo dot fr>

	* plugins/elements/gstidentity.c: (gst_identity_class_init),
	(gst_identity_init), (gst_identity_transform_ip),
	(gst_identity_set_property), (gst_identity_get_property):
	* plugins/elements/gstidentity.h:
	Add property to disable handoff signal emission. Fixes #498694.
	API: GstIdentity::signal-handoffs

2007-11-21  Julien Moutte  <julien@fluendo.com>

	* docs/faq/gst-uninstalled: Yet another missing library for the
	uninstalled script (fft)

2007-11-21  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/faq/developing.xml:
	Add a question about how to submit new translations.

	* docs/random/release:
	Update the contact email address for the Translation Project

	* plugins/elements/gstfdsrc.c:
	The parent_class for fdsrc is pushsrc, not GstElement.

2007-11-20  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  Plug a leak and fix saving.

2007-11-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/gst/gstreamer-sections.txt:
	Add new gst_preset__get_property_names() function to the docs
	to fix the build.

2007-11-20  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	* gst/gstpreset.h:
	  Change _get_preset_names API to return a strv with copies. Add
	  _get_property_names to allow implementations to filter and provide
	  good default implementation.

2007-11-20  Julien MOUTTE  <julien@moutte.net>

	* docs/faq/gst-uninstalled: Add another library to the uninstalled
	script (sdp).

2007-11-19  Stefan Kost  <ensonic@users.sf.net>
