@@ -91,7 +91,7 @@ void _gst_debug_bin_to_dot_file_with_ts (GstBin *bin, GstDebugGraphDetails detai
 
 
 #define GST_DEBUG_BIN_TO_DOT_FILE(bin, details, file_name)
-#define GST_DEBUG_BIN_TO_DOT_FILE_WITH_TS(bin, details, file_tmpl)
+#define GST_DEBUG_BIN_TO_DOT_FILE_WITH_TS(bin, details, file_name)
 
 #endif /* GST_DISABLE_GST_DEBUG */
 
